--- a/estilos.css
+++ b/estilos.css
@@ -105,3 +105,37 @@ body{
     margin-top:15px;
     margin: 12px;
 }
+
+/* Responsividade */
+
+@media only screen and (max-width:1024px){
+    .container{
+        width:90%;
+    }
+}
+
+@media only screen and (max-width:650px){
+    body{
+        background-color: white;
+
+    }
+    .container{
+        width:90%;
+    }
+    .phone{
+        display:none;
+    }
+    .continue{
+        width:100%;
+    }
+    .continue__group{
+        border-top:1px solid transparent;
+    }
+}
+
+@media only screen and (min-width:400px){
+    .container{
+        width:100%;
+    }
+
+}
